<resources>
    <string name="app_name">Cocktail Bar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cocktails">My cocktails</string>
    <string name="add_your_first_cocktail_here">Add your first \ncocktail here</string>
    <string name="main_logo">main logo</string>
    <string name="arrow_down">arrow down</string>
    <string name="pink_lemonade">Pink Lemonade</string>
    <string name="cocktails">cocktails</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="recipe">Recipe</string>
    <string name="pink_limonade">Pink Limonade</string>
    <string name="edit">Edit</string>
    <string name="re">Recipe:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert_title">Delete</string>
    <string name="alert_message">Do you want to delete this cocktail?</string>
    <string name="delete">Delete</string>
    <string name="ingredients">Ingredients</string>
</resources>