<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MyCocktailsEmptyFragment">


    <ImageView
        android:id="@+id/imageViewMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_and_end"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginEnd="@dimen/start_and_end"
        android:contentDescription="@string/main_logo"
        android:src="@drawable/girl_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMiddle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_and_end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/start_and_end"
        android:fontFamily="@font/didact_gothic"
        android:gravity="center"
        android:text="@string/my_cocktails"
        android:textColor="@color/black"
        android:textSize="@dimen/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMain" />

    <TextView
        android:id="@+id/textViewCreateCocktailHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_and_end"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginEnd="@dimen/start_and_end"
        android:fontFamily="@font/didact_gothic"
        android:gravity="center"
        android:text="@string/add_your_first_cocktail_here"
        android:textColor="@color/brown"
        android:textSize="@dimen/body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMiddle" />

    <ImageView
        android:id="@+id/imageViewArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:contentDescription="@string/arrow_down"
        android:src="@drawable/arrow"
        app:layout_constraintEnd_toEndOf="@+id/textViewCreateCocktailHint"
        app:layout_constraintStart_toStartOf="@+id/textViewCreateCocktailHint"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreateCocktailHint" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        style="@style/styleFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/color_light_blue"
        android:contentDescription="@string/add_your_first_cocktail_here"
        android:src="@drawable/add_24"
        app:fabCustomSize="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewArrow" />

</androidx.constraintlayout.widget.ConstraintLayout>


