<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ImageView
        android:id="@+id/cocktailImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-48dp"
        android:scaleType="centerCrop"
        android:src="@drawable/details_phone"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/edit">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:background="@drawable/rounded_top_background"
            android:backgroundTint="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/didact_gothic"
                android:text="@string/pink_limonade"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/didact_gothic"
                android:text="@string/description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listIngr"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/didact_gothic"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

            </androidx.recyclerview.widget.RecyclerView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/re" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginHorizontal="12dp"
                android:layout_height="wrap_content"
                android:text="Muddle lime with leaves from the mint using a pestle and mortar. Mix with sprite. Add ice if needed." />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/color_light_blue"
        android:text="@string/edit"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>